syntax = "proto3";
package proto;


option go_package ="mailinglist-ms/proto";

message EmailEntry{
  int64 id = 1;
  string email = 2;
  int64 confirmed_at = 3;
  bool opt_out = 4;
};

// --- Each Message Represents  An API EndPoint 


message CreateEmailRequest { string email_addr = 1;}
message GetEmailRequest {string email_addr =1;}
message UpdateEmailRequest {string email_entry =1;}
message DeleteEmailRequest {string email_addr=1;}
message GetEmailBatchRequest {
  int32 page = 1;
  int32 count = 2;
}

 

// Response

message EmailResponse { optional EmailEntry email_entry =1;}
message GetEmailBatchResponse {repeated EmailEntry email_entries =1;}


// Service Definition 
service MailingListService {
  rpc CreateEmail(CreateEmailRequest) returns (EmailResponse){}
  rpc GetEmail(GetEmailRequest) returns (EmailResponse){}
  rpc UpdateEmail(UpdatEmailRequest) returns (EmailResponse){}
  rpc DeleteEmail(DeleteEmailRequest) returns (EmailResponse){}
  rpc GetEmailBatch(GetEmailBatchRequest) returns (GetEmailBatchResponse){}
}
